--- a/index.html
+++ b/index.html
@@ -13,94 +13,60 @@
 
 </head>
 <body>
+
+    <!--  BARRA SUPERIOR -->
     <header>
-        <main>
-            <h1>LOCKER.RX</h1>
-    <!-- los siguientes irian en la barra superior derecha con logos, no palabras -->
-        <!-- <section> -->
-        <!-- primero la lupita de busqueda. Debo tener el url para buscar -->
-            <!-- <form method="GET">
-                <label for="busqueda"></label>
-                <input type="text" id="busqueda"name="q" placeholder="Buscar productos...">
-                <button type="submit">Buscar productos</button> 
-            </form> -->
-        <!-- ahora va el wishlist -->
-            <!-- <a class="izquierda" href="#">corazon</a> -->
-        <!-- despues va el carrito -->
-            <!-- <a href="carrito/index.html">carrito</a> -->
-        <!-- ahora vamos con el menu de opciones que va al lado del titulo uno al lado del otro -->
-        <!-- </section>
-            <ul class="menu">
-                <li>
-                  <a href="#">SALES</a>
-                </li>
-                <li>
-                  <a href="">NEW IN</a>
-                </li>
-                <li>
-                  <a href="">ROPA</a> -->
-                  <!-- toda esta subcategoria se va a ver cuando nos posicionemos en la categoria ropa -->
-                    <!-- <ul>
-                      <li> <a href="#">VER TODO</a></li>
-                      <li> <a href="#">JUICY COUTURE</a>E</li>
-                      <li> <a href="#">PLAY BOY</a></li>
-                      <li> <a href="#">REALTREE</a></li>
-                      <li> <a href="#">TOPS/REMERAS</a></li>
-                      <li> <a href="#">FALDAS</a></li>
-                      <li> <a href="#">PANTALONES</a></li>
-                      <li> <a href="#">HOODIES/CAMPERAS</a></li>
-                      <li> <a href="#">CONJUNTOS</a></li> -->
-<!-- 
-                    </ul>
-                 </li>
-                 <li>
-                  <a href="">BAGS</a>
-                 </li>
-                 <li>
-                  <a href="">JEWELERY</a>
-                </li>
+        <main class="barra-navegacion">
+  
+            <!-- <section class="menu-otros">
+                <div>
+                    <a href="./carrito/index.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-fill" viewBox="0 0 16 16"><path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4z"/></svg></a>
+wishlist
+                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bookmark-heart-fill" viewBox="0 0 16 16"><path d="M2 15.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2zM8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/></svg></a>
+lupita de busqueda -->
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16"> <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/></svg>
+                </div> -->
+                
 
-             </ul> -->
-
-             <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">SALES</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">NEW IN</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">BAGS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">JEWELERY</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            CLOTHING
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">JUICY COUTURE</a></li>
-            <li><a class="dropdown-item" href="#">PLAY BOY</a></li>
-            <li><a class="dropdown-item" href="#">REAL TREE</a></li>
-            <li><a class="dropdown-item" href="#">TOPS/REMERAS</a></li>
-            <li><a class="dropdown-item" href="#">FALDAS</a></li>
-            <li><a class="dropdown-item" href="#">PANTALONES</a></li>
-            <li><a class="dropdown-item" href="#">HOODIES Y CAMPERAS</a></li>
-            <li><a class="dropdown-item" href="#">CONJUNTOS</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+               <nav class="navbar navbar-expand-lg ">
+                 <div class="container-fluid">
+                   <a class="navbar-brand display-1" href="#">LOCKER.RX</a>
+                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                   <span class="navbar-toggler-icon"></span>
+                   </button>
+                 <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">SALES</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">NEW IN</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">BAGS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">JEWELERY</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">CLOTHING</a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item menu-active" href="#">JUICY COUTURE</a></li>
+                        <li><a class="dropdown-item menu-active" href="#">PLAY BOY</a></li>
+                        <li><a class="dropdown-item menu-active" href="#">REAL TREE</a></li>
+                        <li><a class="dropdown-item menu-active" href="#">TOPS/REMERAS</a></li>
+                        <li><a class="dropdown-item menu-active" href="#">FALDAS</a></li>
+                        <li><a class="dropdown-item menu-active" href="#">PANTALONES</a></li>
+                        <li><a class="dropdown-item menu-active" href="#">HOODIES Y CAMPERAS</a></li>
+                        <li><a class="dropdown-item menu-active" href="#">CONJUNTOS</a></li>
+                      </ul>
+                  </li>
+                  </ul>
+                 </div>
+                 </div>
+                </nav>
+            </section>
+        
 
         </main>
 
@@ -114,7 +80,7 @@
 <!-- aca van a aparecer varios apartados. Creo que quiero que en compu aparezcan todos y en celular de a uno como carrusel. Pero todavia no decido -->
 <!-- WISHLIST: creo que tengo que crear un enlace que me dirija a un enlace absoluto que este dentro del projecto en otra carpeta. html?-->
        <nav>
-       <p>NUESTROS SERVICIOS</p>
+       <p class="footer">NUESTROS SERVICIOS</p>
         <ul class="menu">
           <li>
             <a href="#">ENCONTRANOS</a>
