agregue los items en fila para pantallas lg

--- a/index.html
+++ b/index.html
@@ -178,8 +178,57 @@ lupita de busqueda -->
             </div>
 
             </div> 
+       <!-- Iconos en filas pantallas grandes -->
+
+      <div class="d-none d-lg-flex justify-content-evenly gap-2 align-items-start  servicio-lg-container">
+                  <div class="servicio-lg">
+                   <img src="./iconos nuestros servicios/1-wishlist.png" class="d-block w-100">
+                   <div class="text-center mt-2">
+                    <a href="#">Wish list</a>
+                   </div>
+                </div>
+
+                  <div class="servicio-lg">
+                    <img src="./iconos nuestros servicios/2-encontranos.png" class="d-block w-100" alt="...">
+                    <div class="text-center mt-2">
+                        <a href="#">Encontranos</a>
+                    </div>
+                  </div>
+
+                  <div class="servicio-lg">
+                    <img src="./iconos nuestros servicios/3-turno.png" class="d-block w-100" alt="...">
+                    <div class="text-center mt-2">
+                        <a href="#">Agenda tu cita</a>
+                    </div>
+                  </div>
+                  
+                  <div class="servicio-lg">
+                    <img src="./iconos nuestros servicios/4-envios-devoluciones.png" class="d-block w-100" alt="...">
+                    <div class="text-center mt-2">
+                        <a href="#">Envios y Devoluciones</a>
+                    </div>
+                  </div>
+
+                  <div class="servicio-lg">
+                    <img src="./iconos nuestros servicios/5-metodos-pago.png" class="d-block w-100">
+                    <div class="text-center mt-2">
+                        <a href="#">Metodos de Pago</a>
+                    </div>
+                  </div>
+
+                  <div class="servicio-lg">
+                    <img src="./iconos nuestros servicios/6-contactanos.png" class="d-block w-100" alt="...">
+                    <div class="text-center mt-2">
+                        <a href="#">Contactanos</a>
+                    </div>
+                  </div>
+      </div>
+
+
         </div>
        </div>
+
+
 
         
      <footer>
