organice mejor los tamaños de las imagenes del carrusel de imagenes

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ lupita de busqueda -->
                 </div> -->
                 
 
-               <nav class="navbar navbar-expand-lg ">
+               <nav class="navbar navbar-expand-lg bg-#F3F3F3"->
                  <div class="container-fluid">
-                   <a class="navbar-brand display-1" href="#">LOCKER.RX</a>
+                   <h1 font-serif >LOCKER.RX</h1>
                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                    <span class="navbar-toggler-icon"></span>
                    </button>
-                 <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="#">SALES</a>
@@ -72,23 +72,18 @@ lupita de busqueda -->
 
         </main>
     </header>
+<!-- CARRUSEL DE FOTOS -->
 
         <div id="carouselExampleAutoplaying" class="carousel slide carrusel-fotos" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/carrusel/carrusel-1.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/_BOK3937.jpg" class="d-block w-100 fotos-carrusel" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel/carrusel-2.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carrusel/_BOK4094.jpg" class="d-block w-100 fotos-carrusel" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel/carrusel-3.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/carrusel/carrusel-4.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/carrusel/carrusel-5.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carrusel/_BOK-2.jpg" class="d-block w-100" alt="...">
                 </div>
 
             </div>
@@ -233,54 +228,7 @@ lupita de busqueda -->
         
      <footer>
 
-<!-- aca van a aparecer varios apartados. Creo que quiero que en compu aparezcan todos y en celular de a uno como carrusel. Pero todavia no decido -->
-
-       <!-- <nav>
-       <p class="footer">NUESTROS SERVICIOS</p>
-        <ul class="menu">
-          <li>
-            <a href="#">ENCONTRANOS</a>
         <ul>
-          <li><a href="#">MAPA</a>
-        </li>
-          <li><a href="#">UBICACION</a>
-        </li>
-          <li><a href="#">DIRECCION</a>
-        </li>
-        </ul>
-          <li><a href="#">WISHLIST</a>
-        </li>
-        <li> -->
-        <!-- el enlace de abajo iria a un calendario -->  
-            <!-- <a href="">RESERVA UN TURNO</a>
-        </li>
-        <li>
-            <a href="#">METODOS DE PAGO</a>
-        </li>
-        <li>
-            <a href="#">ENVIOS Y DEVOLUCIONES</a>
-            <ul>
-                <li> <a href="#">ENVIOS</a></li>
-                <ul>
-                    <li><a href="#">POLITICAS DE ENVIO</a></li>
-                    <li><a href="#">MEDIOS DE ENVIO</a></li>
-                </ul>
-                <li><a href="#">DEVOLUCIONES</a></li>
-                <ul>
-                    <li><a href="#">POLITICAS DE DEVOLUCIONES</a></li>
-                    <li><a href="#">MEDIOS DE DEVOLUCIONES</a></li>
-                </ul>
-            </ul>
-        <li>
-            <a href="">CONTACTANOS</a>
-            <ul>
-                <li> <a href="http://api.whatsapp.com/send?phone=7869785144"> WHATSAPP </a></li> -->
-            <!-- el siguiente es mail, yo quiero qeu se abra otra pestaña por eso puse target:_blank pero cuando lo toco no funciona-->
-                <!-- <li> <a href="mailto:martinalopezrezza8@gmail.com?subject=Consulta&body=Hola! mi nombre es.. y tengo una consulta sobre.." target="_blank">MAIL</a></li>
-            </ul>
-       </nav> -->
-<!-- aca abajo va a ir la parte donde veo ig, tiktok, wsp con mensaje directo, mail con lo mismo y about us -->
-        <!-- <ul>
             <li> 
                 <a href="https://www.instagram.com/locker.rx?igsh=c3JmM3ZiYTVrdm0y" target="_blank" rel="noopener noreferrer"> instagram</a> </li>
             <li> 
@@ -290,7 +238,7 @@ lupita de busqueda -->
             </li>
             <li> 
                 <a href="about-us/index.html">about us</a>
-            </li> -->
+            </li>
      </footer>
 
      <!-- LINK JS -->
