--- a/index.html
+++ b/index.html
@@ -76,13 +76,10 @@
         <div id="carouselExampleAutoplaying" class="carousel slide carrusel-fotos" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/_BOK3937.jpg" class="d-block w-100 fotos-carrusel" alt="...">
+                    <img src="img/carrusel-1.jpg" class="d-block w-100 fotos-carrusel">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel/_BOK4094.jpg" class="d-block w-100 fotos-carrusel" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/carrusel/_BOK-2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/carrusel-2.jpg" class="d-block w-100 fotos-carrusel">
                 </div>
 
             </div>
@@ -120,42 +117,42 @@
              </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                   <img src="./iconos nuestros servicios/1-wishlist.png" class="d-block w-100">
+                   <img src="./iconos-nuestros-servicios/1-wishlist.png" class="d-block w-100">
                    <div class="text-center mt-2">
                     <a href="#">Wish list</a>
                    </div>
                 </div>
 
                   <div class="carousel-item">
-                    <img src="./iconos nuestros servicios/2-encontranos.png" class="d-block w-100" alt="...">
+                    <img src="./iconos-nuestros-servicios/2-encontranos.png" class="d-block w-100" alt="...">
                     <div class="text-center mt-2">
                         <a href="#">Encontranos</a>
                     </div>
                   </div>
 
                   <div class="carousel-item">
-                    <img src="./iconos nuestros servicios/3-turno.png" class="d-block w-100" alt="...">
+                    <img src="./iconos-nuestros-servicios/3-turno.png" class="d-block w-100" alt="...">
                     <div class="text-center mt-2">
                         <a href="#">Agenda tu cita</a>
                     </div>
                   </div>
                   
                   <div class="carousel-item">
-                    <img src="./iconos nuestros servicios/4-envios-devoluciones.png" class="d-block w-100" alt="...">
+                    <img src="./iconos-nuestros-servicios/4-envios-devoluciones.png" class="d-block w-100" alt="...">
                     <div class="text-center mt-2">
                         <a href="#">Envios y Devoluciones</a>
                     </div>
                   </div>
 
                   <div class="carousel-item">
-                    <img src="./iconos nuestros servicios/5-metodos-pago.png" class="d-block w-100">
+                    <img src="./iconos-nuestros-servicios/5-metodos-pago.png" class="d-block w-100">
                     <div class="text-center mt-2">
                         <a href="#">Metodos de Pago</a>
                     </div>
                   </div>
 
                   <div class="carousel-item">
-                    <img src="./iconos nuestros servicios/6-contactanos.png" class="d-block w-100" alt="...">
+                    <img src="./iconos-nuestros-servicios/6-contactanos.png" class="d-block w-100" alt="...">
                     <div class="text-center mt-2">
                         <a href="#">Contactanos</a>
                     </div>
