--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <div id="carouselExampleAutoplaying" class="carousel slide carrusel-fotos" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/carrusel-1.jpg" class="d-block w-100 fotos-carrusel">
+                    <img src="/img/carrusel-1.jpg" class="d-block w-100 fotos-carrusel">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/carrusel-2.jpg" class="d-block w-100 fotos-carrusel">
+                    <img src="/img/carrusel-2.jpg" class="d-block w-100 fotos-carrusel">
                 </div>
 
             </div>
