modifique ruta de img

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
              </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                   <img src="iconos-nuestros-servicios/1-wishlist.png" class="d-block w-100">
+                   <img src="./img/carrusel-1.jpg" class="d-block w-100">
                    <div class="text-center mt-2">
                     <a href="#">Wish list</a>
                    </div>
                 </div>
 
                   <div class="carousel-item">
-                    <img src="iconos-nuestros-servicios/2-encontranos.png" class="d-block w-100" alt="...">
+                    <img src="./img/carrusel-2.jpg" class="d-block w-100" alt="...">
                     <div class="text-center mt-2">
                         <a href="#">Encontranos</a>
                     </div>
